fix overflow-x

--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ font-family: Roboto, sans-serif;
 color: #333;
 font-size: 16px;
 line-height: 22px;
+overflow-x:hidden;
 }
 h1 {
 
